k8s/10-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: resource-postgres
  namespace: rms
spec:
  clusterIP: None # headless for statefulset, but we also expose 5432 via stable DNS
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
  selector:
    app: resource-postgres

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: resource-postgres
  namespace: rms
spec:
  serviceName: resource-postgres
  replicas: 1
  selector:
    matchLabels:
      app: resource-postgres
  template:
    metadata:
      labels:
        app: resource-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["bash","-lc","pg_isready -U postgres -d postgres"]
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 10
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
