k8s/20-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: rms
spec:
  selector: { app: zookeeper }
  ports:
    - name: client
      port: 2181
      targetPort: 2181

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: rms
spec:
  replicas: 1
  selector: { matchLabels: { app: zookeeper } }
  template:
    metadata: { labels: { app: zookeeper } }
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper:3.9
          ports:
            - containerPort: 2181

---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: rms
spec:
  selector: { app: kafka }
  ports:
    - name: broker
      port: 9092
      targetPort: 9092

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: rms
spec:
  replicas: 1
  selector: { matchLabels: { app: kafka } }
  template:
    metadata: { labels: { app: kafka } }
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.7
          ports:
            - containerPort: 9092
