k8s/40-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: resource-ui
  namespace: rms
spec:
  selector: { app: resource-ui }
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-ui
  namespace: rms
spec:
  replicas: 1
  selector: { matchLabels: { app: resource-ui } }
  template:
    metadata: { labels: { app: resource-ui } }
    spec:
      containers:
        - name: ui
          image: rms/resource-ui:local
          imagePullPolicy: IfNotPresent
          ports: [ { containerPort: 80 } ]

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: rms
spec:
  selector: { app: kafka-ui }
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: rms
spec:
  replicas: 1
  selector: { matchLabels: { app: kafka-ui } }
  template:
    metadata: { labels: { app: kafka-ui } }
    spec:
      containers:
        - name: ui
          image: provectuslabs/kafka-ui:latest
          ports: [ { containerPort: 8080 } ]
